--- a/manifest.yml
+++ b/manifest.yml
@@ -1,10 +1,10 @@
 ---
 applications:
 - disk_quota: 1024M
-  name: marbles
+  name: block-lab1jw
   command: "node app.js"
   path: "."
   instances: 1
   memory: 512M
   services:
-   - myblockchain
+   - Blockchain-lab1
